# loan-decisioning-system

./: README.md  pyproject.toml
data/: decline_rules_explained.csv  sample_application_outcomes.csv  sample_application_outcomes_realistic_complete.csv
docs/: api.md  architecture.md  decision_flow.md  design.md  how_to_run.md  modules.md  package_management.md  reason_codes.md
docs/policy/eligibility/: D1001.md  D1002.md  D1003.md  D1004.md
docs/policy/servicing/: D4001.md  SRV_Net_Cash_Position_NEGATIVE.md
src/app/: globals.py  gradio_ui.py  logging_config.py  main.py
src/app/llm/: client.py  sanity_check_llm.py
src/app/llm/agents/: __init__.py  decline_rule_explanation_agent.py  tool_routing_agent.py
src/app/llm/prompts/: prompt.txt
src/app/llm/tools/: __init__.py  application_record_lookup_tool.py  tool.py
src/decisioning/classes/: ApplyRule.py  PolicyRule.py
src/decisioning/modules/: eligibility.py
src/decisioning/policy_rules/: eligibility_rules.py
